TextLine changed and performance updates

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,6 +16,7 @@
         "LFGListSearchPanel_DoSearch",
         "SlashCmdList",
         "WorldFrame",
+        "CreateSimpleTextureMarkup",
         "RaiderIO"
     ],
     "Lua.diagnostics.disable": [
