--- a/pkgmeta.yaml
+++ b/pkgmeta.yaml
@@ -1,3 +1,12 @@
 manual-changelog:
  filename: RecentChanges.md
  markup-type: markdown
+
+ignore:
+ - .github
+ - .github/ISSUE_TEMPLATE
+
+tools-used:
+ - Visual Studio Code with several WoW extensions
+ - AI upscalers
+ - wago.tools
