ReQueue recode in progress, Queue Manager recode just started

--- a/pkgmeta.yaml
+++ b/pkgmeta.yaml
@@ -8,5 +8,5 @@ ignore:
 
 tools-used:
 - Visual Studio Code with several WoW extensions
-- AI upscalers
+- AI upscalers for several images
 - wago.tools
